[package]
name = "arrform"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "String formatting without memory allocator"
repository = "https://github.com/Simsys/arrform"
readme = "readme.md"
keywords = ["no-std", "no-heap", "embedded", "string-formatting"]
categories = ["no-std", "embedded", "value-formatting"]



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

