[package]
authors = ["Simsys <winfried.simon@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "test_size"
version = "0.1.0"

[dependencies]
embedded-hal = "0.2"
nb = "1"
cortex-m = "0.7"
cortex-m-rt = "0.6"
panic-halt = "0.2"
st7789 = "0.6.1"
panic-semihosting = "0.5.6"
embedded-graphics = "0.7.1"
stm32f4xx-hal = { version = "0.10", features = ["rt", "stm32f412", "fsmc_lcd"] }
arrform = { path = "/media/winni/1p4/Werkstatt/crates/arrform/" }

[[bin]]
name = "test_size"
test = false
bench = false

[profile.dev]
opt-level = 1
codegen-units = 16
debug = true
lto = false

[profile.release]
opt-level = "s"     # optimize for size
codegen-units = 1   # better optimizations
debug = true        # symbols are nice and they don't increase the size on Flash
lto = true          # better optimizations
